@@ -26,7 +26,7 @@
 <img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
 <br/>
 <input type="hidden" name="domains" value="iterm.sourceforge.net"></input>
-<input type="text" name="q" size="31" maxlength="150" value=""></input>
+<input type="text" name="q" size="31" maxlength="125" value=""></input>
 </td></tr>
 <tr>
 <td nowrap="nowrap">
@@ -53,6 +53,18 @@
 </form>
 <!-- SiteSearch Google -->
 
+<script type="text/javascript"><!--
+google_ad_client = "pub-5743532873543938";
+google_ad_width = 110;
+google_ad_height = 32;
+google_ad_format = "110x32_as_rimg";
+google_cpa_choice = "CAAQ_-KZzgEaCHfyBUS9wT0_KOP143Q";
+google_ad_channel = "";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+<br>
+<br>
 <A HREF="http://sourceforge.net">
 <IMG SRC="http://sourceforge.net/sflogo.php?group_id=67789&amp;type=2" WIDTH="125" HEIGHT="37" BORDER="0" ALT="SourceForge Logo">
 </A>
